Manual merge complete
Testplugin changes ignored
test events/facts/functions ignored